--- a/android/commonlib/src/main/res/layout/pickerview_options.xml
+++ b/android/commonlib/src/main/res/layout/pickerview_options.xml
@@ -16,19 +16,19 @@
         android:background="@android:color/white"
         android:orientation="horizontal">
 
-        <com.jure.commonlib.customview.wheelview.view.WheelView
+        <com.meeruu.commonlib.customview.wheelview.view.WheelView
             android:id="@+id/options1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <com.jure.commonlib.customview.wheelview.view.WheelView
+        <com.meeruu.commonlib.customview.wheelview.view.WheelView
             android:id="@+id/options2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <com.jure.commonlib.customview.wheelview.view.WheelView
+        <com.meeruu.commonlib.customview.wheelview.view.WheelView
             android:id="@+id/options3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
