--- a/android/commonlib/src/main/res/layout/pickerview_time.xml
+++ b/android/commonlib/src/main/res/layout/pickerview_time.xml
@@ -16,38 +16,37 @@
         android:background="@android:color/white"
         android:orientation="horizontal">
 
-        <com.contrarywind.view.WheelView
+        <com.meeruu.commonlib.customview.wheelview.view.WheelView
             android:id="@+id/year"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.96" />
 
-        <com.contrarywind.view.WheelView
-
+        <com.meeruu.commonlib.customview.wheelview.view.WheelView
             android:id="@+id/month"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <com.contrarywind.view.WheelView
+        <com.meeruu.commonlib.customview.wheelview.view.WheelView
             android:id="@+id/day"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <com.contrarywind.view.WheelView
+        <com.meeruu.commonlib.customview.wheelview.view.WheelView
             android:id="@+id/hour"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <com.contrarywind.view.WheelView
+        <com.meeruu.commonlib.customview.wheelview.view.WheelView
             android:id="@+id/min"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <com.contrarywind.view.WheelView
+        <com.meeruu.commonlib.customview.wheelview.view.WheelView
             android:id="@+id/second"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
