--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,12 +3,13 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <!--<item name="android:windowBackground">@null</item>-->
+        <item name="android:windowBackground">@null</item>
     </style>
 
     <style name="AppSplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- 透明背景，可解决启动黑屏的问题. -->
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@drawable/img_splash</item>
     </style>
 
     <style name="CustomDialog" parent="@android:style/Theme.Dialog">
