--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@null</item>
+        <!--<item name="android:windowBackground">@null</item>-->
     </style>
 
     <style name="AppSplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
