MzBanner 原生接入尝试，邀请套餐bug修复

--- a/android/app/src/main/res/values/ids.xml
+++ b/android/app/src/main/res/values/ids.xml
@@ -22,5 +22,5 @@
     <item name="quit" type="id"/>
     <item name="restart_preview" type="id"/>
     <item name="return_scan_result" type="id"/>
-
+    <item name="mz_banner_item_tag" type="id"></item>
 </resources>
