--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
-    <style name="CustomDialog" parent="@android:style/Theme.Dialog">
+    <style name="CustomDialog" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
