--- a/android/app/src/main/res/values/attr.xml
+++ b/android/app/src/main/res/values/attr.xml
@@ -7,48 +7,43 @@
         <enum name="vertical" value="1"/>
     </attr>
     <attr name="autoPlaying" format="boolean"/>
-    <declare-styleable name="RecyclerViewBannerBase">
-        <attr name="interval"/>
-        <attr name="showIndicator" />
-        <attr name="orientation" />
-        <attr name="autoPlaying"/>
-        <attr name="indicatorSelectedSrc" format="color|reference"/>
-        <attr name="indicatorUnselectedSrc" format="color|reference"/>
-        <attr name="indicatorSpace" format="dimension|reference"/>
-        <attr name="indicatorMarginLeft" format="dimension|reference"/>
-        <attr name="indicatorMarginRight" format="dimension|reference"/>
-        <attr name="indicatorMarginBottom" format="dimension|reference"/>
-        <attr name="indicatorGravity" format="enum">
-            <enum name="left" value="0"/>
-            <enum name="center" value="1"/>
-            <enum name="right" value="2"/>
+
+    <declare-styleable name="WaveLoadingView">
+        <attr name="wlv_borderWidth" format="dimension"/>
+        <attr name="wlv_borderColor" format="color"/>
+        <attr name="wlv_progressValue" format="integer"/>
+        <attr name="wlv_shapeType" format="enum">
+            <enum name="triangle" value="0" />
+            <enum name="circle" value="1" />
+            <enum name="square" value="2" />
+            <enum name="rectangle" value="3" />
         </attr>
-    </declare-styleable>
-
-    <declare-styleable name="BannerLayout">
-        <attr name="interval" />
-        <attr name="showIndicator" />
-        <attr name="orientation" />
-        <attr name="autoPlaying"/>
-        <attr name="itemSpace" format="integer"/>
-        <attr name="centerScale" format="float"/>
-        <attr name="moveSpeed" format="float"/>
-    </declare-styleable>
-
-
-    <declare-styleable name="MZBannerView">
-        <attr name="open_mz_mode" format="boolean"/>
-        <attr name="canLoop" format="boolean"/>
-        <attr name="indicatorPaddingLeft" format="dimension"/>
-        <attr name="indicatorPaddingRight" format="dimension"/>
-        <attr name="indicatorPaddingTop" format="dimension"/>
-        <attr name="indicatorPaddingBottom" format="dimension"/>
-        <attr name="indicatorAlign">
-            <enum name="left" value="0"/>
-            <enum name="center" value="1"/>
-            <enum name="right" value="2"/>
+        <attr name="wlv_triangle_direction" format="enum">
+            <enum name="north" value="0" />
+            <enum name="south" value="1" />
+            <enum name="east" value="2" />
+            <enum name="west" value="3" />
         </attr>
-        <attr name="middle_page_cover" format="boolean"/>
+        <attr name="wlv_round_rectangle" format="boolean"/>
+        <attr name="wlv_round_rectangle_x_and_y" format="integer"/>
+        <attr name="wlv_waveColor" format="color"/>
+        <attr name="wlv_wave_background_Color" format="color"/>
+        <attr name="wlv_waveAmplitude" format="float"/>
+        <attr name="wlv_titleTop" format="string"/>
+        <attr name="wlv_titleCenter" format="string"/>
+        <attr name="wlv_titleBottom" format="string"/>
+        <attr name="wlv_titleTopSize" format="dimension"/>
+        <attr name="wlv_titleCenterSize" format="dimension"/>
+        <attr name="wlv_titleBottomSize" format="dimension"/>
+        <attr name="wlv_titleTopColor" format="color"/>
+        <attr name="wlv_titleCenterColor" format="color"/>
+        <attr name="wlv_titleBottomColor" format="color"/>
+        <attr name="wlv_titleTopStrokeColor" format="color"/>
+        <attr name="wlv_titleTopStrokeWidth" format="dimension"/>
+        <attr name="wlv_titleBottomStrokeColor" format="color"/>
+        <attr name="wlv_titleBottomStrokeWidth" format="dimension"/>
+        <attr name="wlv_titleCenterStrokeColor" format="color"/>
+        <attr name="wlv_titleCenterStrokeWidth" format="dimension"/>
     </declare-styleable>
 
 </resources>
