--- a/android/commonlib/src/main/res/values/ids.xml
+++ b/android/commonlib/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="statusbarutils_fake_status_bar_view" type="id" />
     <item name="statusbarutils_translucent_view" type="id" />
     <item name="viewpager_inner" type="id" />
+    <item name="tag" type="id"/>
 </resources>
