feat：新增Android banner

--- a/android/app/src/main/res/layout/layout_mr_banner.xml
+++ b/android/app/src/main/res/layout/layout_mr_banner.xml
@@ -4,5 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <com.meeruu.commonlib.customview.roundimage.RoundImageView
+        android:id="@+id/iv_banner"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" />
 
 </LinearLayout>
