--- a/android/app/src/main/res/values/ids.xml
+++ b/android/app/src/main/res/values/ids.xml
@@ -23,4 +23,5 @@
     <item name="restart_preview" type="id"/>
     <item name="return_scan_result" type="id"/>
     <item name="mz_banner_item_tag" type="id"></item>
+    <item name="banner_tag" type="id"></item>
 </resources>
