--- a/android/app/src/main/res/layout/layout_mr_banner.xml
+++ b/android/app/src/main/res/layout/layout_mr_banner.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.meeruu.commonlib.customview.roundimage.RoundImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/iv_banner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
