--- a/android/commonlib/src/main/res/values/ids.xml
+++ b/android/commonlib/src/main/res/values/ids.xml
@@ -2,6 +2,5 @@
 <resources>
     <item name="statusbarutils_fake_status_bar_view" type="id" />
     <item name="statusbarutils_translucent_view" type="id" />
-    <item name="viewpager_inner" type="id" />
-    <item name="tag" type="id"/>
+    <item type="id" name="tag_position_key"></item>
 </resources>
