--- a/android/commonlib/src/main/res/values/attrs.xml
+++ b/android/commonlib/src/main/res/values/attrs.xml
@@ -12,12 +12,8 @@
         <attr name="wheelview_dividerColor" format="color" />
         <attr name="wheelview_lineSpacingMultiplier" format="float" />
     </declare-styleable>
-    <declare-styleable name="wenldBanner">
+    <declare-styleable name="ConvenientBanner">
         <attr name="canLoop" format="boolean" />
-        <attr name="canTurn" format="boolean" />
-        <attr name="autoTurnTime" format="integer|reference" />
-        <attr name="scrollDuration" format="integer|reference" />
-        <attr name="isTouchScroll" format="boolean" />
-        <attr name="reverse" format="boolean" />
+        <attr name="autoTurningTime" format="integer" />
     </declare-styleable>
 </resources>
