--- a/android/app/src/main/res/layout/layout_mr_banner.xml
+++ b/android/app/src/main/res/layout/layout_mr_banner.xml
@@ -1,12 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.facebook.drawee.view.SimpleDraweeView
-        android:id="@+id/iv_banner"
+    <com.meeruu.commonlib.customview.loopbanner.ConvenientBanner
+        android:id="@+id/convenientBanner"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        app:autoTurningTime="5000"
+        app:canLoop="true" />
 
 </LinearLayout>
