--- a/android/qiyu_service/res/layout/ysf_message_fragment.xml
+++ b/android/qiyu_service/res/layout/ysf_message_fragment.xml
@@ -45,14 +45,15 @@
                 android:fadingEdge="none"
                 android:focusable="false"
                 android:listSelector="@android:color/transparent"
-                android:scrollbars="vertical" />
+                android:scrollbars="none" />
+
             <ListView
                 android:id="@+id/ysf_quick_reply_list_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:divider="@color/ysf_grey_d9d9d9"
-                android:scrollbars="vertical"
+                android:scrollbars="none"
                 android:visibility="gone" />
 
             <RelativeLayout
@@ -100,8 +101,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="-5dp"
                         android:layout_marginTop="-15dp"
+                        android:layout_marginBottom="-5dp"
                         android:text="2"
                         android:textColor="@android:color/white"
                         android:textSize="80dp"
